--- a/css/style.css
+++ b/css/style.css
@@ -20,14 +20,35 @@ body {
 
 .wrapper {
     display: flex;
-    height: calc(100% - 100px);
+    height: calc(100% - 90px);
 }
 /* /mix */
 
 /* aside */
 aside {
-    width: 200px;
+    width: 230px;
     background-color: #000;
+    padding: 0 20px;
+    color: #fff;
+}
+
+#aside__top {
+    height: calc(100% - 80px);
+}
+
+/* header */
+.logo {
+    height: 80px;
+    padding: 20px 0;
+}
+/* /header */
+
+/* playlist */
+
+/* /playlist */
+
+#aside__bottom {
+    height: 80px;
 }
 /* /aside */
 
@@ -39,7 +60,7 @@ main {
 
 /* footer */
 footer {
-    height: 100px;
+    height: 90px;
     background-color: #282828;
 }
 /* /footer */
