--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,11 @@ ul {
     align-items: center;
     cursor: pointer;
 }
+.btn--bordered {
+    border: 1px solid #fff;
+    padding: 5px 10px;
+    border-radius: 20px;
+}
 
 .aside__btn {
     opacity: 0.6;
@@ -263,7 +268,6 @@ aside a.active,
        align-content: center;
     }
     
-    
     .aside__bottom a {
         margin: 0 auto;
     }
@@ -281,48 +285,51 @@ aside a.active,
 }
 /* / ---- responsive ---- */
 /* /aside__bottom */
-
 /* /aside */
 
 /* main */
 main {
     flex-grow: 1;
 }
+
+/* main__top */
 #main__top {
     height: 90px;
     position: fixed;
     background-color: rgba(0, 0, 0, .5);
-    z-index: 999;
+    z-index: 1;
     left: 50px;
     top: 0;
     right: 0;
-}
-/* 
-.main__nav--wrapper {
-    height: 130px;
     display: flex;
-    justify-content: center;
-    align-items: flex-end;
-}
-.main__nav ul li {
-    display: inline-block;
-} */
-
-section {
-    padding: 40px;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 0 30px;
 }
 
-/* album */
-.album__wrapper {
-    display: flex;
-}
-.album img {
-    height: 200px;
-    width: 200px;
+#upgrade--btn { 
+    padding: 8px 28px;
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: 500;
 }
 
-/* /album */
-/* /main */
+/* ---- responsive ---- */
+@media screen and (min-width:576px) {
+    #main__top {    
+        left: 230px;
+    }
+}
+/* / ---- responsive ---- */
+/* main__top */
+
+/* categories__nav */
+
+/* /categories__nav */
+
+
+
+
 
 /* footer */
 footer {
