--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     color: #fff;
+    font-weight: 600;
 }
 
 body {
@@ -28,6 +29,12 @@ ul {
 }
 /* /mix */
 
+/* helper */
+.txt-upper {
+    text-transform: uppercase;
+}
+/* /helper */
+
 /* btn */
 .btn {
     display: flex;
@@ -47,7 +54,6 @@ ul {
     opacity: 0.6;
     margin-top: 10px;
     font-size: 15px;
-    font-weight: 600;
 }
 
 /* /btn */
@@ -55,7 +61,6 @@ ul {
 /* typo */
 h1 {
     font-size: 25px;
-    font-weight: 600;
 }
 a {
     text-decoration: none;
@@ -78,7 +83,6 @@ aside {
 }
 
 aside a {
-    font-weight: 600;
     opacity: .6;
     font-size: 13px;
 }
@@ -244,7 +248,6 @@ aside a.active,
 
 .profile__btn {
     margin-top: 10px;
-    font-weight: 600;
     color: #fff;
     font-size: 16px;
     padding: 10px 0;
@@ -308,10 +311,13 @@ main {
 }
 
 #upgrade--btn { 
-    padding: 8px 28px;
+    padding: 10px 30px;
     text-transform: uppercase;
-    font-size: 12px;
-    font-weight: 500;
+    font-size: 10px;
+    transition: transform 0.1s;
+}
+#upgrade--btn:hover { 
+    transform: scale(1.12);
 }
 
 /* ---- responsive ---- */
@@ -324,7 +330,43 @@ main {
 /* main__top */
 
 /* categories__nav */
+.categories__nav--wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+.categories__nav ul {
+    margin-top: 90px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    font-size: 13px;
+}
 
+.categories__nav li {
+    margin: 15px 5px;
+    position: relative;
+    padding-bottom: 5px;
+}
+
+.categories__nav li a {
+    color: rgba(255, 255, 255, 0.6);
+}
+.categories__nav li a:hover {
+    color: rgba(255, 255, 255, 0.8);
+}
+
+.categories__nav .active::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 30px;
+    height: 2px;
+    border-radius: 3px;
+    background-color: #adff2f;
+}
 /* /categories__nav */
 
 
