--- a/css/style.css
+++ b/css/style.css
@@ -68,14 +68,17 @@ h2 {
     font-size: 26px;
 }
 h3 {
-    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 700;
+    margin: 5px 0;
+}
+h4 {
     font-size: 13px;
+    text-transform: uppercase;
 }
 a {
     text-decoration: none;
 }
-
-
 /* /typo */
 
 /* aside */
@@ -299,6 +302,7 @@ aside a.active,
 /* main */
 main {
     flex-grow: 1;
+    overflow: auto;
 }
 
 /* main__top */
@@ -340,6 +344,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: flex-end;
+    margin-bottom: 40px;
 }
 .categories__nav--wrapper,
 section {
@@ -380,19 +385,72 @@ section {
 /* /categories__nav */
 
 /* sections */
-section {
-    margin-top: 40px;
+section h2,
+section .album {
+    padding: 0 10px;
 }
 
 .album__wrapper {
     display: flex;
-    justify-content: space-between;
 }
 .album {
-    background-color: red;
-    border: 1px solid #fff;
-    flex-basis: calc((100% / 6) - 10px);
+    flex-basis: calc(100% / 2);
+    flex-wrap: wrap;
+    text-align: center;
 }
+
+.album__cover {
+    background-color: black;
+    position: relative;
+}
+.album__cover img {
+    width: 100%;
+    transition: opacity 0.2s;
+}
+.album:hover img {
+    opacity: 0.3;
+}
+
+.album__cover p {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 40px;
+    color: #fff;
+    display: none;
+    z-index: 100;
+}
+.album:hover .album__cover p {
+    display: block;
+}
+
+.album h3 {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;  
+    overflow: hidden;
+}
+
+.album p.album__sub {
+ font-size: 12px;
+ opacity: .6;
+ margin-bottom: 40px;
+}
+
+
+/* ---- responsive ---- */
+@media screen and (min-width:768px) {
+    .album {
+        flex-basis: calc(100% / 4);
+    }
+
+@media screen and (min-width:992px) {
+    .album {
+        flex-basis: calc(100% / 6);
+    }
+}
+/* / ---- responsive ---- */
 /* /sections */
 
 
