--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ aside a.active,
 
 /* ---- responsive ---- */
 @media screen and (max-width:575px) {
-    header a *:not(i, img),
+    header a *:not(i):not(img),
     .aside__bottom a *:not(i),
     .aside__bottom .btn *:not(img) {
         display: none;
@@ -392,6 +392,7 @@ section .album {
 
 .album__wrapper {
     display: flex;
+    flex-wrap: wrap;
 }
 .album {
     flex-basis: calc(100% / 2);
@@ -407,6 +408,7 @@ section .album {
 .album__cover img {
     width: 100%;
     transition: opacity 0.2s;
+    display: block;
 }
 .album:hover img {
     opacity: 0.4;
